# MusicDL-PyQt

./: .gitignore  README.md  app.py  app.spec  mac.spec  main.py  main.qml  pyproject.toml  requirements.txt  version_info.txt  win.spec
assets/: icon.icns  original.afdesign
utils/: convert.py  core.py  downloader.py  theme.py
views/: main.qml
